--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+crossterm = "0.28"
 reqwest = { version = "0.12.5", features = ["json"] }
 serde = { version = "1.0.207", features = ["derive"] }
 serde_json = "1.0.124"
